# JavaCallback

./: .gitignore
boost_cloud/cloud_client/: ReadMe.txt  cloud_client.cpp  cloud_client.vcxproj  cloud_client.vcxproj.filters
boost_cloud/cloud_server/: cloud_server.cpp  cloud_server.vcxproj  cloud_server.vcxproj.filters  stdafx.cpp
boost_cloud/cloud_starter/: boost_result.txt  libuv_result.txt  tcp_cloud_starter.sln  test.txt
boost_cloud/include/: client_main_test.hpp  define.h  performance_provider.h  server.hpp  server_main_test.hpp  server_task.hpp  sync_out_puter.h
boost_cloud/libuv_client/: ReadMe.txt  libuv_client.cpp  libuv_client.vcxproj  libuv_client.vcxproj.filters  stdafx.cpp
boost_cloud/libuv_server/: ReadMe.txt  libuv_server.cpp  libuv_server.vcxproj  libuv_server.vcxproj.filters  stdafx.cpp
cloud_prototypes/include/: define.h  performance_provider.h  sample_prepare.h  sync_out_puter.h
cloud_prototypes/inproc/: inproc.sln  statistic.txt  test.txt
cloud_prototypes/one_process/: one_process.sln  test.txt
nitro_cloud/: .gitignore  nitro_cloud.sln
nitro_cloud/cloud_client/: cloud_client.cpp  cloud_client.vcxproj  cloud_client.vcxproj.filters  stdafx.cpp
nitro_cloud/cloud_server/: ReadMe.txt  cloud_server.cpp  cloud_server.vcxproj  cloud_server.vcxproj.filters  server.h
nitro_cloud/include/: client_main_test.hpp  helper.h  server_main_test.hpp  sync_out_puter.h
nitro_cloud/nitro_cloud/: callback_simple.cpp  callback_simple.h  logger.h  nitro_cloud.def  nitro_cloud.vcxproj  (+12 more)
nitro_cloud/posix/posix_cloud_server/: CMakeLists.txt  main.cpp
(+93 files in other folders)
